objects/Project_Activity_Detail_Mapping_Rule__c.object
<CustomObject>
    <description>Used regarding its source (e.g. LAO, NIS, etc.) to support activity capture from many future teams</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether rule is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Type__c</fullName>
        <description>Used to identify which date on the target object to update</description>
        <label>Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Entity_Type__c</fullName>
        <description>System source the mapping will use</description>
        <label>External Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>LAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mapping_Rule__c</fullName>
        <label>Mapping Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_API_Field_Name__c</fullName>
        <description>Source field to use for updating target field</description>
        <label>Source API Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Activity_Name__c</fullName>
        <description>Activity description criteria to identify which activity to update</description>
        <label>Target Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Milestone_Name__c</fullName>
        <description>Milestone description criteria which will be used to identify which milestone to update</description>
        <label>Target Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Unique_Act_Plus_Date_Type__c</fullName>
        <description>Unique value reflecting the concatenation of a Target Activity Name with a Date Type</description>
        <formula>TEXT(External_Entity_Type__c)+&apos;-&apos;+ Target_Activity_Name__c  &amp; &apos;-&apos; &amp;  Date_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Unique Activity Plus Date Type</label>
        <type>Text</type>
    </fields>
    <label>Project Activity Detail Mapping Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Milestone_Name__c</columns>
        <columns>Target_Activity_Name__c</columns>
        <columns>Source_API_Field_Name__c</columns>
        <columns>External_Entity_Type__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Target_Unique_Act_Plus_Date_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PADMR-{0000000}</displayFormat>
        <label>Project Activity Detail Mapping Rules Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Activity Detail Mapping Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>